@@ -3,6 +3,11 @@ Released 2.4.1 2011-06-xx
 
 Changes since 2.4.0:
 
+Modules:
+* New LDAP option OPT_X_TLS_PACKAGE available in OpenLDAP 2.4.26+
+  to determine the name of the SSL/TLS package OpenLDAP was
+  built with
+
 Lib/
 * ldap.modlist.modifyModlist(): New key-word argument
   case_ignore_attr_types used to define attribute types for which
